--- a/about.html
+++ b/about.html
@@ -9,59 +9,55 @@
 <body>
     <header>
         <nav>
-            <div class="nav-left">
-                <a href="#">John Doe</a>
-            </div>
-            <div class="nav-right">
+            <div class="logo">John Doe</div>
+            <div class="nav-links">
                 <a href="#">Blog</a>
                 <a href="#">Projects</a>
                 <a href="#">About</a>
                 <a href="#">Newsletter</a>
-                <button class="theme-toggle">🌙</button>
+                <input type="checkbox" class="l theme-toggle" aria-label="Toggle Dark Mode">
             </div>
         </nav>
-        <h1>John Doe - UI Designer</h1>
+        <h1>John Doe</h1>
     </header>
-    <div class="profile-image">
-        <img src="fotitos/image1.jpg" alt="John Doe">
+    
+    <div class="container">
+        <div class="profile-image" style="text-align: center;">
+            <img src="fotitos/image1.jpg" alt="John Doe" style="display: inline-block;">
+        </div>
+        <section class="about">
+            <h2>About Me</h2>
+            <p>As a passionate and experienced UI designer, I am dedicated to creating intuitive and engaging user experiences...</p>
+        </section>
+
+        <section class="skills">
+            <h2>Skills</h2>
+            <ul>
+                <li>Extensive experience in UI design</li>
+                <li>Proficiency in Adobe Creative Suite and Sketch</li>
+                <li>Excellent visual design skills</li>
+                <li>Strong communication and collaboration skills</li>
+                <li>Proficiency in HTML, CSS, and JavaScript</li>
+            </ul>
+        </section>
+
+        <section class="experience">
+            <h2>Experience</h2>
+            <ul>
+                <li>5 years of experience as a UI designer</li>
+                <li>Led the design of a successful e-commerce website</li>
+                <li>Created wireframes and prototypes for a mobile banking app</li>
+            </ul>
+        </section>
+
+        <section class="education">
+            <h2>Education</h2>
+            <ul>
+                <li>Bachelor's degree in Graphic Design</li>
+                <li>Certified User Experience Designer (CLEB)</li>
+            </ul>
+        </section>
     </div>
-    <section class="about">
-        <h2>About Me</h2>
-        <p>As a passionate and experienced UI designer, I am dedicated to creating intuitive and engaging user experiences that meet the needs of my clients and their users. I have a strong understanding of design principles and a proficiency in design tools, and I am comfortable working with cross-functional teams to bring projects to fruition. I am confident in my ability to create designs that are both visually appealing and functional, and I am always looking for new challenges and opportunities to grow as a designer.</p>
-    </section>
-
-
-
-    <section class="skills">
-        <h2>Skills</h2>
-        <ul>
-            <li>Extensive experience in UI design, with a strong portfolio of completed projects</li>
-            <li>Proficiency in design tools such as Adobe Creative Suite and Sketch</li>
-            <li>Excellent visual design skills, with a strong understanding of layout, color theory, and typography</li>
-            <li>Ability to create wireframes and prototypes to communicate design concepts</li>
-            <li>Strong communication and collaboration skills, with the ability to work effectively with cross-functional teams</li>
-            <li>Expertise in conducting user research and gathering insights to inform design decisions</li>
-            <li>Proficiency in HTML, CSS, and JavaScript</li>
-        </ul>
-    </section>
-
-    <section class="experience">
-        <h2>Experience</h2>
-        <ul>
-            <li>5 years of experience as a UI designer, working on a variety of projects for clients in the tech and retail industries</li>
-            <li>Led the design of a successful e-commerce website, resulting in a 25% increase in online sales</li>
-            <li>Created wireframes and prototypes for a mobile banking app, leading to a 20% increase in user engagement</li>
-            <li>Conducted user research and usability testing to inform the redesign of a healthcare provider’s website, resulting in a 15% increase in website traffic</li>
-        </ul>
-    </section>
-
-    <section class="education">
-        <h2>Education</h2>
-        <ul>
-            <li>Bachelor's degree in Graphic Design</li>
-            <li>Certified User Experience Designer (CLEB)</li>
-        </ul>
-    </section>
 
     <footer>
         <p>© 2023 <a href="#">Twitter</a> <a href="#">LinkedIn</a> <a href="#">Email</a> <a href="#">RSS feed</a> <a href="#">Add to Feedly</a></p>
@@ -71,7 +67,7 @@
         const themeToggle = document.querySelector('.theme-toggle');
         const body = document.body;
 
-        themeToggle.addEventListener('click', () => {
+        themeToggle.addEventListener('change', () => {
             body.classList.toggle('dark-mode');
         });
     </script>
