--- a/newsletter.html
+++ b/newsletter.html
@@ -9,22 +9,23 @@
 <body>
     <header>
         <nav>
-            <div class="logo">Your Name</div>
-            <div class="nav-links">
-                <a href="#">Blog</a>
-                <a href="#">Projects</a>
-                <a href="#">About</a>
-                <a href="#">Newsletter</a>
-            </div>
+          <span class="logo">Your Name</span>
+          <div class="nav-links">
+            <a href="#">Blog</a>
+            <a href="#">Projects</a>
+            <a href="#">About</a>
+            <a href="#">Newsletter</a>
+          </div>
+          <div class="toggle"><input class="l" type="checkbox"  id="theme-toggle"/></div>
         </nav>
     </header>
 
     <section class="newsletter container">
-        <h1>Stories and Interviews</h1>
-        <p>Subscribe to learn about new product features, the latest in technology, solutions, and updates.</p>
-        <form>
-            <input type="email" placeholder="Enter your email">
-            <button type="submit">Subscribe</button>
+        <h4 class="newsletter-title">Stories and Interviews</h4>
+        <p class="newsletter-text">Subscribe to learn about new product features, the latest in technology, solutions, and updates.</p>
+        <form class="newsletter-form">
+            <input type="email" class="newsletter-input" placeholder="Enter your email">
+            <button type="submit" class="newsletter-button">Subscribe</button>
         </form>
         <p class="privacy">We care about your data in our <a href="#">privacy policy</a>.</p>
     </section>
