la mala pal jason

--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
     
     <div class="container">
         <div class="profile-image" style="text-align: center;">
-            <img src="fotitos/image1.jpg" alt="John Doe" style="display: inline-block;">
+            <img src="img/image1.jpg" alt="John Doe" style="display: inline-block;">
         </div>
         <section class="about">
             <h2>About Me</h2>
