--- a/homepage.html
+++ b/homepage.html
@@ -17,10 +17,10 @@
         <nav>
           <span class="logo">Your Name</span>
           <div class="nav-links">
-            <a href="#">Blog</a>
-            <a href="#">Projects</a>
-            <a href="#">About</a>
-            <a href="#">Newsletter</a>
+            <a href="homepage.html">Blog</a>
+            <a href="project.html">Projects</a>
+            <a href="about.html">About</a>
+            <a href="newsletter.html">Newsletter</a>
           </div>
           <div class="toggle"><input class="l" type="checkbox"  id="theme-toggle"/></div>
         </nav>
