actualizando la informacion

--- a/about.html
+++ b/about.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>John Doe - UI Designer</title>
+    <title>Equipo de Trabajo - Ingenieros de Sistemas</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <nav>
-          <div class="logo">John Doe</div>
+          <div class="logo">Equipo de Trabajo</div>
           <button class="menu-button">
             <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="80" height="80" viewBox="0,0,256,256">
               <g fill="currentColor" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt"
@@ -25,59 +25,69 @@
           </button>
           <div class="nav-links">
             <a href="homepage.html">Blog</a>
-            <a href="project.html">Projects</a>
-            <a href="about.html">About</a>
+            <a href="project.html">Proyectos</a>
+            <a href="about.html">Sobre Nosotros</a>
             <a href="newsletter.html">Newsletter</a>
-            <a href="authors.html">Authors</a>
+            <a href="authors.html">Autores</a>
             <div class="toggle"><input class="l" type="checkbox" id="theme-toggle" /></div>
           </div>
         </nav>
-        <h1>John Doe</h1>
+        <h1>Equipo de Trabajo</h1>
       </header>
 
       <div>
         <div class="profile-image">
           <img
             src="img\about.jpg"
-            alt="John Doe"
+            alt="Equipo de Trabajo"
           />
         </div>
         <section class="about">
-            <h2>About Me</h2>
-            <p>As a passionate and experienced UI designer, I am dedicated to creating intuitive and engaging user experiences...</p>
+            <h2>Sobre Nosotros</h2>
+            <p>Somos un equipo de ingenieros de sistemas apasionados por la tecnología y la innovación. Nos especializamos en el desarrollo de software, la implementación de soluciones tecnológicas y la optimización de sistemas para mejorar la eficiencia y la productividad.</p>
         </section>
 
         <section class="skills">
-            <h2>Skills</h2>
+            <h2>Habilidades</h2>
             <ul>
-                <li>Extensive experience in UI design</li>
-                <li>Proficiency in Adobe Creative Suite and Sketch</li>
-                <li>Excellent visual design skills</li>
-                <li>Strong communication and collaboration skills</li>
-                <li>Proficiency in HTML, CSS, and JavaScript</li>
+                <li>Desarrollo de software en lenguajes como Java, Python y C#</li>
+                <li>Diseño y administración de bases de datos (SQL, NoSQL)</li>
+                <li>Desarrollo de aplicaciones web y móviles</li>
+                <li>Gestión de proyectos con metodologías ágiles (Scrum, Kanban)</li>
+                <li>Seguridad informática y ciberseguridad</li>
+                <li>Automatización de procesos con DevOps</li>
             </ul>
         </section>
 
         <section class="experience">
-            <h2>Experience</h2>
+            <h2>Experiencia</h2>
             <ul>
-                <li>5 years of experience as a UI designer</li>
-                <li>Led the design of a successful e-commerce website</li>
-                <li>Created wireframes and prototypes for a mobile banking app</li>
+                <li>Desarrollo de sistemas de gestión empresarial (ERP) para compañías multinacionales</li>
+                <li>Implementación de soluciones de inteligencia artificial y machine learning</li>
+                <li>Creación de plataformas de comercio electrónico escalables</li>
+                <li>Optimización de infraestructuras en la nube (AWS, Azure, Google Cloud)</li>
+                <li>Colaboración en proyectos de código abierto y comunidades tecnológicas</li>
             </ul>
         </section>
 
         <section class="education">
-            <h2>Education</h2>
+            <h2>Educación</h2>
             <ul>
-                <li>Bachelor's degree in Graphic Design</li>
-                <li>Certified User Experience Designer (CLEB)</li>
+                <li>Ingeniería de Sistemas en la Universidad del Norte</li>
+                <li>Certificaciones en AWS, Microsoft Azure y Google Cloud</li>
+                <li>Cursos especializados en inteligencia artificial y big data</li>
+                <li>Diplomados en ciberseguridad y DevOps</li>
             </ul>
         </section>
     </div>
 
     <footer>
-        <p>© 2023 <a href="#">Twitter</a> <a href="#">LinkedIn</a> <a href="#">Email</a> <a href="#">RSS feed</a> <a href="#">Add to Feedly</a></p>
+        <p>© 2025 • 
+          <a href="https://twitter.com" target="_blank">Twitter</a> • 
+          <a href="https://linkedin.com" target="_blank">LinkedIn</a> •
+          <a href="mailto:info@tublog.com">Email</a> • 
+          <a href="rss-feed-url">RSS feed</a>
+        </p>
     </footer>
 
     <script src="script.js"></script>
