--- a/authors.html
+++ b/authors.html
@@ -13,7 +13,7 @@
   <!-- Contenedor principal -->
   <header>
     <nav>
-      <span class="logo">Your Name</span>
+      <span class="logo">Equipo de Trabajo</span>
       <button class="menu-button">
         <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="80" height="80" viewBox="0,0,256,256">
           <g fill="currentColor" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt"
@@ -29,10 +29,10 @@
       </button>
       <div class="nav-links">
         <a href="homepage.html">Blog</a>
-        <a href="project.html">Projects</a>
-        <a href="about.html">About</a>
+        <a href="project.html">Proyectos</a>
+        <a href="about.html">Sobre Nosotros</a>
         <a href="newsletter.html">Newsletter</a>
-        <a href="authors.html">Authors</a>
+        <a href="authors.html">Autores</a>
         <div class="toggle"><input class="l" type="checkbox" id="theme-toggle" /></div>
       </div>
     </nav>
