--- a/project.html
+++ b/project.html
@@ -35,7 +35,7 @@
         <div class="toggle"><input class="l" type="checkbox" id="theme-toggle" /></div>
       </div>
     </nav>
-    <h1>PROJECTS</h1>
+    <h1>PROYECTOS</h1>
   </header>
 
   <div class="container">
