--- a/homepage.html
+++ b/homepage.html
@@ -13,7 +13,7 @@
   <!-- Contenedor principal -->
   <header>
     <nav>
-      <span class="logo">Equipo de Trabajo</span>
+      <span class="logo">DevTeam</span>
 
       <button class="menu-button">
         <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="80" height="80" viewBox="0,0,256,256">
