--- a/newsletter.html
+++ b/newsletter.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <nav>
-          <span class="logo">Equipo de Trabajo</span>
+          <span class="logo">DevTeam</span>
           <button class="menu-button">
             <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="80" height="80" viewBox="0,0,256,256">
               <g fill="currentColor" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt"
