--- a/about.html
+++ b/about.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Equipo de Trabajo - Ingenieros de Sistemas</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet" />
 </head>
+
 <body>
     <header>
         <nav>
-          <div class="logo">Equipo de Trabajo</div>
+          <div class="logo">DevTeam</div>
           <button class="menu-button">
             <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="80" height="80" viewBox="0,0,256,256">
               <g fill="currentColor" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt"
